# autosticker

./: Dockerfile  README.md  main.py  pyproject.toml
app/: __init__.py  __main__.py  cfg.py  main.py  util.py
